# esp32-c6-1.47inch

./: README.md
imu/: CMakeLists.txt  README.md  i2c_init_test.sh  release.txt  sdkconfig
imu/components/imu/: CMakeLists.txt  imu.c  imu.h  imu_util.h  madgwick.c  mahony.c  math_helper.h  mpu9250.c  mpu9250.h  mpu9250_i2c.c  mpu9250_i2c.h  sensor_calib.c
imu/main/: CMakeLists.txt  app_main.c  imu_config.c  imu_config.h  imu_task.c  imu_task.h  lvgl_port_intf.c  my_lvgl_app.c  web_server.c  web_server.h
imu/web-front/: index.html  package.json
imu/web-front/src/: App.vue  main.js
imu/web-front/src/components/: Attitude3D.vue  CalibrationView.vue  CreditsView.vue  DashboardView.vue  MagCloudView.vue  RollGauge.vue  SettingsView.vue
imu/web-front/src/composables/: useDevice.js
imu/web-front/src/store/: imuStore.js
lcd/main/: app_main.c  st7789_lcd.c
lvgl/: CMakeLists.txt  sdkconfig  sdkconfig.old
lvgl/assets/: page1_ui.odp
lvgl/main/: CMakeLists.txt  app_main.c  my_lvgl_app.c  my_lvgl_app.h  st7789_lcd.h
